fixed visiting reason to get it submitted into the database

--- a/app/assets/stylesheets/modules/visitor-form.sass
+++ b/app/assets/stylesheets/modules/visitor-form.sass
@@ -80,25 +80,10 @@
 .center-buttons
   text-align: center
 
-.form-with-host
+.form-ui
   padding-top: 10%
   display: none
-  top: 100px
-
-.form-without-host
-  padding-top: 10%  
-  display: none
-  top: 100px  
-
-.show-page-text
-  display: none  
-  top: 100px  
-  padding-top: 10% 
-
-.form-other
-  padding-top: 10%
-  display: none
-  top: 100px  
+  top: 100px 
 
 .center
   text-align: center
