--- a/app/views/guests/_form_other.haml
+++ b/app/views/guests/_form_other.haml
@@ -1,6 +1,5 @@
 %br
   .h3.col-lg-10.col-lg-offset-1.center Last step! Please fill out the information below.
-%br
 
 .col-lg-6.col-lg-offset-3
   = form_for(@guest, :html => { :class => 'form-horizontal'}) do |f|
@@ -28,9 +27,9 @@
 
     .form-group
       = f.hidden_field :organization_id, value: @organization_id
-      = f.hidden_field :reason, value: "Other" 
+      = f.hidden_field :reason, value: 'Other' 
 
     .form-group.center-buttons.span-3
       = f.submit 'Register', :class => 'btn btn-success btn-xlg'
     .form-group.center-buttons.span-3  
-      = submit_tag 'Cancel', :type => :reset, :class => 'btn btn-default btn'
+      = submit_tag 'Cancel', :type => :reset, :class => 'btn btn-default'
