updated various visitor ui components

--- a/app/views/guests/new.haml
+++ b/app/views/guests/new.haml
@@ -57,7 +57,7 @@
 .form-ui.form-other.group
   = render :partial => 'form_other'
 
-.form-ui.show-page-text
+.form-ui.show-page-text.group
   = render :partial => 'confirmation'   
 
 .row-fluid 
