--- a/app/views/guests/show.haml
+++ b/app/views/guests/show.haml
@@ -6,7 +6,7 @@
     %br
     %h1 
       Thanks for Signing In Easy, 
-      = @guest.name
+      = @guest
     %br  
     %h2 If you are visiting someone, they have been notified you're here.
     %h2 (You also got a cool e-mail with wifi information and our user policies)
@@ -21,5 +21,8 @@
 :javascript
 // redirect to new guest page after 4 seconds
   window.setTimeout(function() {
-     window.location.href = '../guests/new';
+     window.location.href='#{new_organization_guest_path(current_user.id)}'
   }, 4000);
+
+// window.location.href = '../guests/new';
+// %(window.location.href='#{new_organization_guest_path @organization_id}')
