--- a/app/views/guests/show.haml
+++ b/app/views/guests/show.haml
@@ -6,10 +6,10 @@
     %br
     %h1 
       Thanks for Signing In Easy, 
-      = @guest
+      = @guest.name
     %br  
     %h2 If you are visiting someone, they have been notified you're here.
-    %h2 (You also got a cool e-mail with wifi information and our user policies)
+    / %h2 (You also got a cool e-mail with wifi information and our user policies)
     %br
     %p Redirecting back to the registration page in a moment...
     =# link_to "or go now", new_organization_guest_path, id: "link"
