--- a/app/views/layouts/application.haml
+++ b/app/views/layouts/application.haml
@@ -57,7 +57,7 @@
 
               %li.dropdown
                 %a.dropdown-toggle{"data-toggle" => "dropdown", :href => ""}
-                  [User's Name]
+                  = current_user.name
                   %b.caret
                 %ul.dropdown-menu
 
