--- a/app/views/layouts/application.haml
+++ b/app/views/layouts/application.haml
@@ -41,7 +41,7 @@
 
               %li.dropdown
                 %a.dropdown-toggle{"data-toggle" => "dropdown", :href => ""}
-                  [Organization's Name]
+                  [Organization Name]
                   %b.caret
                 %ul.dropdown-menu
 
