added yesterday button to sort dashboard data

--- a/app/views/guests/index.haml
+++ b/app/views/guests/index.haml
@@ -3,6 +3,7 @@
     Dashboard - [Organization Name]
     .btn-group.pull-right
       %button.btn.btn-default.active{type: "button"} Today
+      %button.btn.btn-default.disabled{type: "button"} Yesterday
       %button.btn.btn-default.disabled{type: "button"} Week
       %button.btn.btn-default.disabled{type: "button"} Month
 
