autocomplete instructions followed. Autocomplete not working yet

--- a/app/views/guests/_form_meeting.haml
+++ b/app/views/guests/_form_meeting.haml
@@ -29,7 +29,8 @@
 
       .form-group 
         =# f.label :employee_name, "Hosting Member"
-        = f.text_field :employee_name, :class => 'form-control input-lg', :placeholder => 'Hosting Member', :required => "true"
+        = f.autocomplete_field :employee_name, autocomplete_employee_name_organizations_path, :id => 'employee_autocomplete', :class => 'form-control input-lg', :placeholder => 'Hosting Member', :required => "true"
+        %span.help-block Start typing the name of the person you are here to see  
 
       .form-group
         = f.hidden_field :organization_id, value: @organization_id
