--- a/app/assets/stylesheets/modules/visitor-form.sass
+++ b/app/assets/stylesheets/modules/visitor-form.sass
@@ -102,4 +102,45 @@
   display: table
   clear: both  
 
+.ui-autocomplete
+  margin-top: 2px
+  -webkit-border-radius: 4px
+  -moz-border-radius: 4px
+  border-radius: 4px
+  position: absolute
+  top: 100%
+  left: 0
+  z-index: 1000
+  display: none
+  float: left
+  min-width: 160px
+  padding: 4px 0
+  margin: 1px 0 0
+  list-style: none
+  background-color: white
+  border: 1px solid #CCC
+  border: 1px solid rgba(0, 0, 0, 0.2)
+  -webkit-border-radius: 5px
+  -moz-border-radius: 5px
+  border-radius: 5px
+  -webkit-box-shadow: 0 5px 10px rgba(0, 0, 0, 0.2)
+  -moz-box-shadow: 0 5px 10px rgba(0, 0, 0, 0.2)
+  box-shadow: 0 5px 10px rgba(0, 0, 0, 0.2)
+  -webkit-background-clip: padding-box
+  -moz-background-clip: padding
+  background-clip: padding-box
+  li
+    a
+      display: block
+      padding: 3px 15px
+      clear: both
+      font-weight: normal
+      line-height: 18px
+      color: #333
+      white-space: nowrap
+    a:hover, a.ui-state-focus
+      color: #fff
+      text-decoration: none
+      background-color: #0088cc
+
 
