--- a/app/views/guests/index.haml
+++ b/app/views/guests/index.haml
@@ -65,6 +65,6 @@
         %td 
           = guest.created_at.strftime("%b. %d\, %Y")
         %td 
-          = guest.created_at.in_time_zone.strftime(" %I:%M %p")
+          = guest.created_at.strftime(" %I:%M %p")
         %td       
 %br        
