--- a/app/views/guests/show.haml
+++ b/app/views/guests/show.haml
@@ -2,13 +2,13 @@
   .organization-logo-container
     =image_tag("your_business_logo_here_small.png")
 
-  .show-page-text
+  .btn-grid.show-page-text
     %br
-    %h1 
-      Thanks for Signing In Easy, 
+    %h3 
+      Thanks for registering, 
       = @guest.name
     %br  
-    %h2 If you are visiting someone, they have been notified you're here.
+    %h3 If you are visiting someone, they have been notified you're here.
     / %h2 (You also got a cool e-mail with wifi information and our user policies)
     %br
     %p Redirecting back to the registration page in a moment...
@@ -21,5 +21,5 @@
 :javascript
 // redirect to new guest page after 4 seconds
   window.setTimeout(function() {
-     window.location.href='#{new_organization_guest_path(current_user.id)}'
+     window.location.href='#{new_organization_guest_path(@guest.organization_id)}'
   }, 5000);
