updated show page text, text notification text

--- a/app/views/guests/show.haml
+++ b/app/views/guests/show.haml
@@ -4,12 +4,12 @@
 
   .btn-grid.show-page-text
     %br
-    %h3 
+    %h2 
       Thanks for registering, 
-      = @guest.name
+      = @guest.name.split.first
     %br  
-    %h3 If you are visiting someone, they have been notified you're here.
-    / %h2 (You also got a cool e-mail with wifi information and our user policies)
+    %h2 If you are visiting someone, they have been notified you're here.
+    %h2 Please take a seat in the waiting area.
     %br
     %p Redirecting back to the registration page in a moment...
     =# link_to "or go now", new_organization_guest_path, id: "link"
