--- a/app/views/layouts/application.haml
+++ b/app/views/layouts/application.haml
@@ -28,11 +28,11 @@
             -if signed_in?
 
               %li
-                = link_to "Dashboard", organization_guests_path(current_user.id)
+                = link_to "Dashboard", organization_guests_path(current_user)
               %li.disabled
-                %a Reports             
+                = link_to "Reports"             
               %li
-                = link_to "Front Desk", new_organization_guest_path(current_user.id)
+                = link_to "Front Desk", new_organization_guest_path(current_user)
             
         
           %ul.nav.navbar-nav.navbar-right
@@ -47,13 +47,11 @@
                 %ul.dropdown-menu
 
                   %li
-                    %a{:href => "#"} Visitors
+                    = link_to "Visitors"
                   %li.disabled
-                    =# link_to "Employees", user_path(current_user.id)
-                    %a{:href => "#"} Employees
+                    = link_to "Employees"
                   %li.disabled
-                    =# link_to "Visitor Archive", user_path(current_user.id)
-                    %a{:href => "#"} Settings                   
+                    = link_to "Settings"                   
 
 
               %li.dropdown
@@ -64,7 +62,7 @@
 
                 
                   %li
-                    = link_to "Settings", user_path(current_user.id) 
+                    = link_to "Settings"
                 
                   %li.divider
                   %li
