--- a/app/views/guests/index.haml
+++ b/app/views/guests/index.haml
@@ -49,7 +49,7 @@
       %th Actions
 
   %tbody
-    - @guests.each do |guest|
+    - @todays_guests.each do |guest|
       %tr
         %td 
           = guest.name
@@ -59,7 +59,7 @@
           = guest.email
         
         %td 
-          = guest.employee
+          = Employee.find(guest.employee_id).name
         %td
           = guest.reason 
         %td 
