--- a/app/views/layouts/application.haml
+++ b/app/views/layouts/application.haml
@@ -28,11 +28,11 @@
             -if signed_in?
 
               %li
-                = link_to "Dashboard", organization_guests_path(current_user)
+                = link_to "Dashboard", organization_guests_path(current_user.organization.id)
               %li.disabled
                 = link_to "Reports"             
               %li
-                = link_to "Check In Guest", new_organization_guest_path(current_user)
+                = link_to "Check In Guest", new_organization_guest_path(current_user.organization.id)
             
         
           %ul.nav.navbar-nav.navbar-right
@@ -47,7 +47,7 @@
                 %ul.dropdown-menu
 
                   %li
-                    = link_to "Front Desk", new_organization_guest_path(current_user)
+                    = link_to "Front Desk", new_organization_guest_path(current_user.organization.id)
                   %li.disabled
                     = link_to "Settings" 
                   %li.divider
