updated forms for better ui

--- a/app/views/guests/_form_meeting.haml
+++ b/app/views/guests/_form_meeting.haml
@@ -1,5 +1,5 @@
 %br
-  .h3.col-lg-10.col-lg-offset-1.center Last step! Please fill out the information below. 
+
   .h3.col-lg-10.col-lg-offset-1.center Let us know who your meeting is with and they will be automatically notified of your arrival.
 
 
@@ -17,11 +17,11 @@
       .form-group
       
         =# f.label :name, "Name"
-        = f.text_field :name, :class => 'form-control input-lg', :placeholder => 'First and Last Name', :required => "true"
+        = f.text_field :name, :class => 'form-control input-lg', :placeholder => 'Guest First and Last Name', :required => "true"
 
       .form-group
         =# f.label :company, "Company Name"
-        = f.text_field :company, :class => 'form-control input-lg', :placeholder => 'Company'
+        = f.text_field :company, :class => 'form-control input-lg', :placeholder => 'Guest Company Name'
 
       .form-group
         =# f.label :email, "Email Address"
@@ -29,8 +29,9 @@
 
       .form-group 
         =# f.label :employee_name, "Hosting Member"
-        = f.autocomplete_field :employee_name, autocomplete_employee_name_organization_guests_path, :id => 'employee_autocomplete', :class => 'form-control input-lg', :placeholder => 'Hosting Member', :required => "true"
-        %span.status Start typing the name of the person you are here to see
+        %span.status I'm here to see
+        = f.autocomplete_field :employee_name, autocomplete_employee_name_organization_guests_path, :id => 'employee_autocomplete', :class => 'form-control input-lg', :placeholder => 'Host full name please. Start typing their name.', :required => "true"
+        
           
 
       .form-group
