--- a/app/views/guests/show.haml
+++ b/app/views/guests/show.haml
@@ -1,6 +1,6 @@
 .row
   .organization-logo-container
-    =image_tag("your_business_logo_here_small.png")
+    =image_tag("1871_plate_logo_2in.jpg", :width => '300')
 
   .btn-grid.show-page-text
     %br
