--- a/app/views/layouts/application.haml
+++ b/app/views/layouts/application.haml
@@ -54,7 +54,7 @@
                     = link_to "Members"
               %li.dropdown
                 %a.dropdown-toggle{"data-toggle" => "dropdown", :href => ""}
-                  = current_user.email
+                  = current_user.name
                   %b.caret
                 %ul.dropdown-menu 
                   %li
