--- a/app/views/guests/new.haml
+++ b/app/views/guests/new.haml
@@ -1,7 +1,7 @@
 .visitor-ui-form
   .row-fluid
     .organization-logo-container
-      =image_tag("your_business_logo_here_small.png")
+      =image_tag("1871_plate_logo_2in.jpg", :width => '300')
     .visitor-ui-home-icon
       %i.fa.fa-cog.icon-black
 
@@ -9,36 +9,34 @@
 .row
   .btn-grid
     %br
-      .h3 
-        Welcome to 
-        = current_user.organization.name
+      .h1 
         What brings you in today?
     %br
     .form-navigation
       %a
-        %button(type="submit" class="btn btn-primary btn-xxlg meeting-btn")
+        %button(type="submit" class="btn btn-default btn-xxlg meeting-btn")
           %i.fa.fa-calendar.icon-white
           Meeting
-      %a
-        %button(type="submit" class="btn btn-primary btn-xxlg drop-in-btn")
-          %i.fa.fa-user.icon-white
-          Drop In    
+      / %a
+      /   %button(type="submit" class="btn btn-primary btn-xxlg drop-in-btn")
+      /     %i.fa.fa-user.icon-white
+      /     Drop In    
       %a
         %button(type="submit" class="btn btn-primary btn-xxlg tour-btn")
           %i.fa.fa-location-arrow.icon-white
           Tour
       %a
         %button(type="submit" class="btn btn-primary btn-xxlg event-btn")
-          %i.fa.fa-group.icon-white 
+          %i.fa.fa-group.icon-white
           Event
-      %a
-        %button(type="submit" class="btn btn-primary btn-xxlg info-btn")
-          %i.fa.fa-info-circle.icon-white
-          Information    
-      %a
-        %button(type="submit" class="btn btn-primary btn-xxlg other-btn")
-          %i.fa.fa-question-circle.icon-white
-          Other
+      / %a
+      /   %button(type="submit" class="btn btn-primary btn-xxlg info-btn")
+      /     %i.fa.fa-info-circle.icon-white
+      /     Information    
+      / %a
+      /   %button(type="submit" class="btn btn-primary btn-xxlg other-btn")
+      /     %i.fa.fa-question-circle.icon-white
+      /     Other
     
 	
 
