uploaded 1871 image, fixed settings icon link to dashboard, cleaned up more front end ui

--- a/app/assets/stylesheets/modules/visitor-form.sass
+++ b/app/assets/stylesheets/modules/visitor-form.sass
@@ -18,10 +18,13 @@
 
 .btn-grid
   position: relative
-  padding-top: 20%
+  padding-top: 18%
   /* bottom: 100px
   text-align: center
   height: 100%
+
+.form-spacing
+  padding-top: 30px
 
 .bottom-logo-container
   position: fixed
@@ -38,9 +41,8 @@
 
 .visitor-ui-home-icon
   position: fixed
-  top: 5px
-  right: 5px
-  font-size: 15px
+  bottom: 15px
+  right: 15px
 
 .visitor-ui-refresh-icon
   position: fixed
@@ -81,7 +83,7 @@
   text-align: center
 
 .form-ui
-  padding-top: 20%
+  padding-top: 18%
   display: none
   top: 100px 
 
