removed dummy numbers on dashboard

--- a/app/views/guests/index.haml
+++ b/app/views/guests/index.haml
@@ -18,13 +18,13 @@
   .col-sm-6.col-md-4
     .jumbotron
       %h3.center Notifications Sent
-      %h1.center 150
+      %h1.center X
 
 
   .col-sm-6.col-md-4
     .jumbotron
       %h3.center Minutes Saved
-      %h1.center 75 
+      %h1.center X
 
 .clearfix
 
