updated button placement, size

--- a/app/views/guests/new.haml
+++ b/app/views/guests/new.haml
@@ -38,7 +38,9 @@
       /     Other
     %br
     %br
-    %h5 Not finding the option you need? Click Here
+    %br
+      %p Not finding the option you need? 
+      = link_to 'Click Here', :type=> 'button', :class=> 'btn btn-primary other-btn'
 	
 
 .form-ui.form-meeting.group
