updated misc ui

--- a/app/views/guests/new.haml
+++ b/app/views/guests/new.haml
@@ -2,6 +2,7 @@
   .row-fluid
     .organization-logo-container
       =image_tag("1871_plate_logo_2in.jpg", :width => '300')
+    .visitor-ui-current-time  
 
 
       
