added refresh icon for visitor ui

--- a/app/assets/stylesheets/modules/visitor-form.sass
+++ b/app/assets/stylesheets/modules/visitor-form.sass
@@ -44,11 +44,10 @@
   bottom: 15px
   right: 15px
 
-.visitor-ui-refresh-icon
+.visitor-ui-refresh
   position: fixed
-  top: 5px
-  left: 5px
-  image-height: 15px  
+  bottom: 15px
+  left: 15px
 
 .btn-xxlg
   margin: 20px 20px 20px 20px
