--- a/app/views/guests/new.haml
+++ b/app/views/guests/new.haml
@@ -72,6 +72,6 @@
   .visitor-ui-home-icon
     = link_to image_tag('settings-24-256.png', :size => '20x20'), organization_guests_path(current_user.organization.id)
   .visitor-ui-refresh
-    = link_to image_tag('reload.png', :size => '25x25'), new_organization_guest_path(current_user.organization.id)
+    = link_to image_tag('arrow_left.png', :size => '25x25'), new_organization_guest_path(current_user.organization.id)
 
 
