testing different button colors for feedback - Primary, Default, Success

--- a/app/views/guests/new.haml
+++ b/app/views/guests/new.haml
@@ -27,7 +27,7 @@
         %i.fa.fa-location-arrow.icon-white
         Tour
       %a
-      %button(type="submit" class="btn btn-primary btn-xxlg event-btn")
+      %button(type="submit" class="btn btn-success btn-xxlg event-btn")
         %i.fa.fa-group.icon-white
         Event
       / %a
