--- a/app/views/guests/_form_other.haml
+++ b/app/views/guests/_form_other.haml
@@ -1,7 +1,7 @@
 %br
   .h3.col-lg-10.col-lg-offset-1.center Last step! Please fill out the information below.
 
-.col-lg-6.col-lg-offset-3
+.col-lg-6.col-lg-offset-3.form-spacing
   = form_for(@guest, :html => { :class => 'form-horizontal'}) do |f|
     = if @guest.errors.any?
       .error_explanation
@@ -19,11 +19,11 @@
 
     .form-group
       =# f.label :company, "Company Name"
-      = f.text_field :company, :class => 'form-control input-lg', :placeholder => 'Company'
+      = f.text_field :company, :class => 'form-control input-lg', :placeholder => 'Guest Company Name (optional)'
 
     .form-group
       =# f.label :email, "Email Address"
-      = f.email_field :email, :class => 'form-control input-lg', :placeholder => 'Email Address'
+      = f.email_field :email, :class => 'form-control input-lg', :placeholder => 'Guest Email Address (optional)'
 
     .form-group
       = f.hidden_field :organization_id, value: @organization_id
@@ -32,4 +32,4 @@
     .form-group.center-buttons.span-3
       = f.submit 'Register', :class => 'btn btn-success btn-xlg'
     .form-group.center-buttons.span-3  
-      = submit_tag 'Cancel', :type => :reset, :class => 'btn btn-default'
+      =# submit_tag 'Cancel', :type => :reset, :class => 'btn btn-default'
