testing custom button color, flat and neutral so it doesn't clash with colors on logos

--- a/app/assets/stylesheets/modules/visitor-form.sass
+++ b/app/assets/stylesheets/modules/visitor-form.sass
@@ -145,3 +145,18 @@
       background-color: #0088cc
 
 
+.btn-custom
+  background-color: hsl(0, 0%, 81%) !important
+  background-repeat: repeat-x
+  filter: progid:DXImageTransform.Microsoft.gradient(startColorstr="#cecece", endColorstr="#cecece")
+  background-image: -khtml-gradient(linear, left top, left bottom, from(#cecece), to(#cecece))
+  background-image: -moz-linear-gradient(top, #cecece, #cecece)
+  background-image: -ms-linear-gradient(top, #cecece, #cecece)
+  background-image: -webkit-gradient(linear, left top, left bottom, color-stop(0%, #cecece), color-stop(100%, #cecece))
+  background-image: -webkit-linear-gradient(top, #cecece, #cecece)
+  background-image: -o-linear-gradient(top, #cecece, #cecece)
+  background-image: linear-gradient(#cecece, #cecece)
+  border-color: #cecece #cecece hsl(0, 0%, 81%)
+  color: #333 !important
+  text-shadow: 0 1px 1px rgba(255, 255, 255, 0)
+  -webkit-font-smoothing: antialiased
