--- a/app/views/guests/new.haml
+++ b/app/views/guests/new.haml
@@ -68,7 +68,7 @@
 
 .row-fluid 
   .bottom-logo-container
-    =image_tag("SignInEasyLogo-bottom.png")
+    =#image_tag("SignInEasyLogo-bottom.png")
   .visitor-ui-home-icon
     = link_to image_tag('settings-24-256.png', :size => '20x20'), organization_guests_path(current_user.organization.id)
   .visitor-ui-refresh
