--- a/app/views/employees/_import_form.haml
+++ b/app/views/employees/_import_form.haml
@@ -1,1 +1,10 @@
-%h1 hi
+
+= form_tag import_organization_employees_path, multipart: true, class: 'form-horizontal form-signin employee-crud-form' do
+  .form-group
+    = label_tag 'Upload .csv', nil, class: "col-sm-4 control-label"
+    .col-sm-8
+      =file_field_tag :file
+  .form-group
+    .col-sm-4
+    .col-sm-8
+      = submit_tag "Upload", :class => 'btn btn-primary'
