other button is working

--- a/app/assets/stylesheets/modules/visitor-form.sass
+++ b/app/assets/stylesheets/modules/visitor-form.sass
@@ -160,3 +160,19 @@
   color: #333 !important
   text-shadow: 0 1px 1px rgba(255, 255, 255, 0)
   -webkit-font-smoothing: antialiased
+
+.btn-custom-2
+  background-color: hsl(0, 0%, 90%) !important
+  background-repeat: repeat-x
+  filter: progid:DXImageTransform.Microsoft.gradient(startColorstr="#e5e5e5", endColorstr="#e5e5e5")
+  background-image: -khtml-gradient(linear, left top, left bottom, from(#e5e5e5), to(#e5e5e5))
+  background-image: -moz-linear-gradient(top, #e5e5e5, #e5e5e5)
+  background-image: -ms-linear-gradient(top, #e5e5e5, #e5e5e5)
+  background-image: -webkit-gradient(linear, left top, left bottom, color-stop(0%, #e5e5e5), color-stop(100%, #e5e5e5))
+  background-image: -webkit-linear-gradient(top, #e5e5e5, #e5e5e5)
+  background-image: -o-linear-gradient(top, #e5e5e5, #e5e5e5)
+  background-image: linear-gradient(#e5e5e5, #e5e5e5)
+  border-color: #e5e5e5 #e5e5e5 hsl(0, 0%, 90%)
+  color: #333 !important
+  text-shadow: 0 1px 1px rgba(255, 255, 255, 0)
+  -webkit-font-smoothing: antialiased  
