updated a few items on guest show page. jQuery form button disabled works, needs better validations

--- a/app/views/guests/_form_meeting.haml
+++ b/app/views/guests/_form_meeting.haml
@@ -39,6 +39,6 @@
         = f.hidden_field :reason, value: 'Meeting'      
 
       .form-group.center-buttons.span-3
-        = f.submit 'Register', :class => 'btn btn-success btn-xlg'
+        = f.submit 'Register', :class => 'btn btn-success btn-xlg', :id => 'registerButton'
       .form-group.center-buttons.span-3  
         =# submit_tag 'Cancel', :type => :reset, :class => 'btn btn-default form-cancel'
