--- a/app/views/guests/show.haml
+++ b/app/views/guests/show.haml
@@ -12,7 +12,7 @@
       - if @guest.email_notification_status == "sent" && @guest.text_notification_status == "sent"
         %h2 
           =@employee.name.titleize
-          has been notified by e-mail and text.
+          has been notified by e-mail and text message.
       - elsif @guest.email_notification_status == "sent"
         %h2 
           =@employee.name.titleize
@@ -20,7 +20,7 @@
       - elsif @guest.text_notification_status == "sent"
         %h2 
           =@employee.name.titleize
-          has been notified by text.
+          has been notified by text message.
       - else
         %h2 
           Please have the front-desk notify
@@ -32,10 +32,10 @@
 
 .row  
   .bottom-logo-container
-    =image_tag("SignInEasyLogo-bottom.png")    
+    =#image_tag("SignInEasyLogo-bottom.png")    
 
 :javascript
-// redirect to new guest page after 4 seconds
+// redirect to new guest page after 5 seconds
   window.setTimeout(function() {
      window.location.href='#{new_organization_guest_path(@guest.organization_id)}'
   }, 5000);
