added manual to guest check in in the nav bar, changed email_notification text to p instead of h1

--- a/app/views/layouts/application.haml
+++ b/app/views/layouts/application.haml
@@ -28,7 +28,7 @@
               %li.disabled
                 = link_to "Reports"             
               %li
-                = link_to "Check In Guest", new_organization_guest_path(current_user.organization.id)
+                = link_to "Manual Guest Check In", new_organization_guest_path(current_user.organization.id)
               
           %ul.nav.navbar-nav.navbar-right
       
