--- a/app/views/guests/index.haml
+++ b/app/views/guests/index.haml
@@ -23,7 +23,7 @@
 
   .col-sm-6.col-md-4
     .jumbotron
-      %h3.center Minutes Saved
+      %h3.center Visitors Per Hour
       %h1.center X
 
 .clearfix
