--- a/app/views/layouts/application.haml
+++ b/app/views/layouts/application.haml
@@ -26,9 +26,11 @@
               %li
                 = link_to "Dashboard", organization_guests_path(current_user.organization.id)
               %li.disabled
-                = link_to "Reports"             
+                = link_to "Reports"  
+
               %li
-                = link_to "Manual Guest Check In", new_organization_guest_path(current_user.organization.id)
+                %button.btn.btn-custom-2.navbar-btn{:type => "button", "data-target" => "#myModal", "data-toggle" => "modal"} Manual Guest Check In
+                =# link_to "Manual Guest Check In", new_organization_guest_path(current_user.organization.id)
               
           %ul.nav.navbar-nav.navbar-right
       
