--- a/app/views/guests/index.haml
+++ b/app/views/guests/index.haml
@@ -1,13 +1,24 @@
+%br
+.col-lg-10.col-lg-offset-1.center
+  %button.btn.btn-default{:type => "button", "data-target" => "#myModal", "data-toggle" => "modal"} 
+    %i.fa.fa-user
+    Manual Guest Check In
+%br    
 .page-header
+
   %h2 
     Dashboard - 
     = current_user.organization.name
-    .button.btn.btn-custom-2.center{:type => "button", "data-target" => "#myModal", "data-toggle" => "modal"} Manual Guest Check In
     .btn-group.pull-right
       %button.btn.btn-default.active{type: "button"} Today
       %button.btn.btn-default.disabled{type: "button"} Yesterday
       %button.btn.btn-default.disabled{type: "button"} Week
       %button.btn.btn-default.disabled{type: "button"} Month
+
+
+// Start Javascript View based on button options
+
+// Today's Visitor View
 
 .row
   .col-sm-6.col-md-4
@@ -71,8 +82,12 @@
         %td   
           = link_to image_tag('Trash_Can-128.png', :size => '16x16'), organization_guests_path(current_user.organization.id), :method => 'delete', :remote => true
           
-          
-/ Modal
+         
+
+
+
+
+// Visitor Check In Modal
 #myModal.modal.fade{"aria-hidden" => "true", "aria-labelledby" => "myModalLabel", role: "dialog", tabindex: "-1"}
   .modal-dialog
     .modal-content
@@ -100,23 +115,35 @@
             %label.col-sm-2.control-label{for: "inputEmail3"} Mobile
             .col-sm-10
               %input.form-control{placeholder: "Guest Mobile Phone Number", type: "phone"}/   
+
+              // Add collection_select for choosing the reason they are here
+
           .form-group
-            %label.col-sm-2.control-label{for: "inputPassword3"} Hosting Member
+            %label.col-sm-2.control-label{for: "inputEmail3"} Reason
+            .col-sm-10
+              %select
+                %option{value: "1"} Meeting
+                %option{value: "2"} Tour
+                %option{value: "3"} Event
+                %option{value: "4"} Other  
+              // Auto complete form would go active if it's for a meeting
+          .form-group
+            %label.col-sm-2.control-label{for: "inputPassword3"} Host
             .col-sm-10
               %input.form-control{placeholder: "Hosting Member"}/   
             %br
             %br
             %br       
         =# render :partial => 'form_model'
-
-
       .modal-footer
         %button.btn.btn-default{"data-dismiss" => "modal", type: "button"} Cancel
         %button.btn.btn-success{type: "button"} Register Guest
     / /.modal-content
   / /.modal-dialog
 / /.modal
-          
+      
+
+
 %br       
 
 
