--- a/app/views/layouts/application.haml
+++ b/app/views/layouts/application.haml
@@ -27,10 +27,8 @@
                 = link_to "Dashboard", organization_guests_path(current_user.organization.id)
               %li.disabled
                 = link_to "Reports"  
-
               %li
-                %button.btn.btn-custom-2.navbar-btn{:type => "button", "data-target" => "#myModal", "data-toggle" => "modal"} Manual Guest Check In
-                =# link_to "Manual Guest Check In", new_organization_guest_path(current_user.organization.id)
+          
               
           %ul.nav.navbar-nav.navbar-right
       
@@ -47,7 +45,7 @@
                     = link_to "Settings" 
                   %li.divider
                   %li.disabled
-                    = link_to "Guest Records"
+                    =# link_to "Guest Records"
                   %li
                     = link_to "Manage Members", organization_employees_path(current_user.organization.id)
               %li.dropdown
