--- a/app/views/guests/index.haml
+++ b/app/views/guests/index.haml
@@ -51,7 +51,7 @@
       %th Name
       %th Company
       %th Email
-      
+      %th Mobile
       %th Hosting Member
       %th Visit Reason
       %th Date
@@ -67,7 +67,8 @@
           = guest.company  
         %td 
           = guest.email
-        
+        %td
+          =# guest.mobile_number
         %td
           - if guest.employee_id
             = Employee.find(guest.employee_id).name
@@ -80,7 +81,8 @@
         %td 
           = guest.created_at.in_time_zone.strftime(" %I:%M %p")
         %td   
-          = link_to image_tag('Trash_Can-128.png', :size => '16x16'), organization_guests_path(current_user.organization.id), :method => 'delete', :remote => true
+          = link_to organization_guest_path(current_user.organization.id, guest.id), :confirm => "are you sure?", :method => :delete do
+            %i.fa.fa-times
           
   
 = link_to '<i class="fa fa-cloud-download"></i> Download all guest records (.csv)'.html_safe, url_for(:format => "csv"), :class => 'btn btn-default'    
