--- a/app/views/guests/new.haml
+++ b/app/views/guests/new.haml
@@ -15,7 +15,7 @@
     %br
     .form-navigation
       %a
-      %button(type="submit" class="btn btn-custom btn-xxlg meeting-btn")
+      %button(type="submit" class="btn btn-default btn-xxlg meeting-btn")
         %i.fa.fa-calendar.icon-white
         Meeting
       / %a
@@ -23,7 +23,7 @@
       /     %i.fa.fa-user.icon-white
       /     Drop In    
       %a
-      %button(type="submit" class="btn btn-custom-2 btn-xxlg tour-btn")
+      %button(type="submit" class="btn btn-default btn-xxlg tour-btn")
         %i.fa.fa-location-arrow.icon-white
         Tour
       %a
